fix table header text alignment

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -128,7 +128,7 @@ the whole table when the filter button is clicked */
 
 /* Center header titles */
 .chata-table .tabulator-header .tabulator-col {
-  text-align: center;
+  text-align: center !important;
 }
 .chata-table .tabulator-header .tabulator-col-title {
   padding-left: 10px !important;
